Issue 355 - Minor front page text alignment and visual tweaks
- paragraph line spacing increased a touch to aid readability
- links made $ct-purple instead of $text-color to make them more visually distinct on the page
- default front page text-alignment changed to 'left' as per Dan's suggestion in one of the GitHub issues for the top text
- specific pieces of text aligned 'center'
(could have done it the other way around, but left-alignment seems more logical as a default?)
- added link to YouTube CT channel in top text

--- a/assets/css/2-base/_ctas.sass
+++ b/assets/css/2-base/_ctas.sass
@@ -9,7 +9,7 @@ button,
   vertical-align: middle
   text-align: center
   box-shadow: 0px 6px 0px 0px rgba(0, 0, 0, 0.06)
-  
+
   transition: all 150ms
   transform: scale(1)
 
@@ -18,7 +18,7 @@ button,
     transform: scale(0.98)
 
 a
-  color: $text-color
+  color: $ct-purple
   transition: color 200ms
   text-decoration: underline
 
