--- a/assets/css/2-base/_typeface.sass
+++ b/assets/css/2-base/_typeface.sass
@@ -3,7 +3,9 @@ html, body
   color: $text-color
   font-size: 1.6rem
 
-
+p
+  line-height: 2.8rem
+  
 h1, h2, h3, h4, h5, h6,
 button, .cta-button
   font-family: $sans-serif
